added title and author to paper

--- a/project/energy_profile_paper/paper.tex
+++ b/project/energy_profile_paper/paper.tex
@@ -367,17 +367,17 @@
 
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Some\\ Title}
+\title{An Energy Consumption Profile and Recommendations for Decreasing Electricity Usage on a Small Cluster}
 
 
 % author names and affiliations
 % use a multiple column layout for up to two different
 % affiliations
 
-\author{\IEEEauthorblockN{Jane Doe\hspace*{0.4in}}
+\author{\IEEEauthorblockN{Brian Hall\hspace*{0.4in}}
 \IEEEauthorblockA{Information and Computer Sciences Department\\
 University of Hawai`i at M\=anoa, Honolulu, HI, U.S.A.\\
-$[$janedoe$]$@hawaii.edu}
+$[$bhall7$]$@hawaii.edu}
 %\and
 %\IEEEauthorblockN{Authors Name/s per 2nd Affiliation (Author)}
 %\IEEEauthorblockA{line 1 (of Affiliation): dept. name of organization\\
@@ -423,6 +423,7 @@ $[$janedoe$]$@hawaii.edu}
 
 \begin{abstract}
 This is where the abstract goes
+% TODO
 \end{abstract}
 
 %\begin{IEEEkeywords}
