calculating percent idle time; added to readme

--- a/assignment_4/README
+++ b/assignment_4/README
@@ -13,10 +13,18 @@ Question 2) See ex1/matmul_outerproduct.c.
 
 Question 3) See ex1/results/parallel_speedup.png. The parallel speedup for the optimal platform with 1600 processors is an amazing 1033.5! However, for the normal platform it's a modest 11.125, actually worse than using 16 or 64 processors. On a real machine I would rein in the number of processors used, regardless of how many are available. 
 
-Question 4) I decided the time it would take me to implement, run and plot the changes would take me past the deadline. Working on the project instead. Humbled.
+Question 4) Ran out of time; moved on to project.
 
 
 	## Exercise 2 ##
 	################
 
-Question 1) 
+Question 1) See ex2/lu_simple.c.
+
+Question 2) 
+
+Question 3) Ran out of time; moved on to project.
+
+Question 4) Ran out of time; moved on to project.
+
+Question 5) Ran out of time; moved on to project.
