setup for ex2 q3

--- a/assignment_4/README
+++ b/assignment_4/README
@@ -21,7 +21,7 @@ Question 4) Ran out of time; moved on to project.
 
 Question 1) See ex2/lu_simple.c.
 
-Question 2) 
+Question 2)  See ex2/lu_roundrobin.c.
 
 Question 3) Ran out of time; moved on to project.
 
